--- a/packages/resafe/package.json
+++ b/packages/resafe/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://resafe.js.org",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ofabiodev/resafe/resafe.git"
+    "url": "git+https://github.com/ofabiodev/resafe.git"
   },
   "bugs": {
     "url": "https://github.com/ofabiodev/resafe/issues"
@@ -18,7 +18,6 @@
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
