--- a/.github/workflows/cd_publish.yml
+++ b/.github/workflows/cd_publish.yml
@@ -18,7 +18,7 @@ jobs:
     if: github.event.repository.fork == false
     name: Release Please
     outputs:
-      release_created: ${{ steps.release.outputs.releases_created }}
+      release_created: ${{ steps.release.outputs['packages/resafe--release_created'] }}
     steps:
       - name: 🤝 Release Please
         uses: googleapis/release-please-action@v4
@@ -31,7 +31,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: release-please
-    if: ${{ needs.release-please.outputs.release_created }}
+    if: ${{ needs.release-please.outputs.release_created == 'true' }}
     steps:
       - name: ➕ Actions - Checkout
         uses: actions/checkout@v6
