chore: normalize package description

--- a/packages/resafe/package.json
+++ b/packages/resafe/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resafe",
   "version": "1.0.3",
-  "description": "🛡️ Detects ReDoS vulnerabilities in regexes using Thompson NFA construction and spectral radius analysis",
+  "description": "Detects ReDoS vulnerabilities in regexes using Thompson NFA construction and spectral radius analysis.",
   "license": "MIT",
   "homepage": "https://resafe.js.org",
   "repository": {
